[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/GameManager/GameManager.gd" type="Script" id=1]
[ext_resource path="res://src/Login/Login.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UserProfile/UserProfile.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/RegisterAndLogin/RegisterAndLogin.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Register/Register.tscn" type="PackedScene" id=6]

[node name="GameManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterAndLogin" parent="Main" instance=ExtResource( 4 )]

[node name="Register" parent="Main" instance=ExtResource( 6 )]
visible = false

[node name="Login" parent="Main" instance=ExtResource( 2 )]
visible = false

[node name="LineEdit" parent="Main/Login/Container/VBoxContainer2/Username" index="1"]
text = "lcs@godot.com"

[node name="LineEdit" parent="Main/Login/Container/VBoxContainer2/Password" index="1"]
text = "lucas123"
secret = false

[node name="UserProfile" parent="Main" instance=ExtResource( 3 )]
visible = false

[editable path="Main/Login"]
